# rs-wgcfg

./: Cargo.toml  LICENSE.txt  Makefile  README.md
src/: fs_conf.rs  gen_keys.rs  ip_netmask.rs  main.rs  peer_conf.rs  server_conf.rs  write_conf.rs
