[package]
name = "rs-wgcfg"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
rand = "0.8.5"
rand_core = "0.6.4"
inquire = "0.6.2"
qrcode = "0.12.0"

curve25519-dalek = { version = "4.0.0-rc.2", default-features = false }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/dalek-cryptography/curve25519-dalek.git"
rev = "f460ae149b0000695205cc78f560d74a2d3918eb"